plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version '6.0.54'
}

group = 'dev.schwalbe'
version = providers.gradleProperty('mod_version').get()
base { archivesName = 'autovalley' }
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.20.1'
    copyIdeResources = false
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            if (project.hasProperty('uiPreview')) property 'autovalley.preview', 'true'
            mods { autovalley { source sourceSets.main } }
        }
    }
}

repositories { mavenCentral() }
dependencies {
    minecraft 'net.minecraftforge:forge:1.20.1-47.4.0'
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
tasks.named('processResources', ProcessResources).configure {
    inputs.property 'mod_version', project.version
    filesMatching('META-INF/mods.toml') { expand(mod_version: project.version) }
}
test { useJUnitPlatform() }
jar { finalizedBy 'reobfJar' }
